# NGspice_interface

./: CMakeLists.txt  System_Timer.cpp  System_Timer.h  library.cpp  library.h  logger.h  ngspice_interface.cpp  ngspice_interface.h
Tests/: Test_Motor_Emulator.cpp  main_tests.cpp
example/: main.c
lib/Spice64_dll/lib/: about-libs.txt  ngspice.exp  ngspice.lib
lib/Spice64_dll/lib/ngspice/: analog.cm  digital.cm  spice2poly.cm  table.cm  xtradev.cm  xtraevt.cm
lib/Spice64_dll/share/ngspice/scripts/: spinit
motors/: DSX10smotor.net  DSX10smotorUIC.net
test_circuts/: rfswitch.cir
tests/: MockArduino.cpp  MockArduino.h  System_Timer_tests.cpp  Test_Motor_Emulator.cpp  main_tests.cpp  ngSpiceInterface_tests.cpp  no_catch_seg_check.cpp
